@@ -98,6 +98,22 @@ name|hdfs
 operator|.
 name|protocol
 operator|.
+name|HdfsConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
 name|SnapshotDiffReport
 import|;
 end_import
@@ -404,6 +420,102 @@ name|tmpDir
 argument_list|)
 expr_stmt|;
 comment|// TODO: since we have tmp directory, we can support "undo" with failures
+comment|// set the source path using the snapshot path
+name|inputOptions
+operator|.
+name|setSourcePaths
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|getSourceSnapshotPath
+argument_list|(
+name|sourceDir
+argument_list|,
+name|inputOptions
+operator|.
+name|getToSnapshot
+argument_list|()
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|getSnapshotName (String name)
+specifier|private
+specifier|static
+name|String
+name|getSnapshotName
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
+return|return
+name|Path
+operator|.
+name|CUR_DIR
+operator|.
+name|equals
+argument_list|(
+name|name
+argument_list|)
+condition|?
+literal|""
+else|:
+name|name
+return|;
+block|}
+DECL|method|getSourceSnapshotPath (Path sourceDir, String snapshotName)
+specifier|private
+specifier|static
+name|Path
+name|getSourceSnapshotPath
+parameter_list|(
+name|Path
+name|sourceDir
+parameter_list|,
+name|String
+name|snapshotName
+parameter_list|)
+block|{
+if|if
+condition|(
+name|Path
+operator|.
+name|CUR_DIR
+operator|.
+name|equals
+argument_list|(
+name|snapshotName
+argument_list|)
+condition|)
+block|{
+return|return
+name|sourceDir
+return|;
+block|}
+else|else
+block|{
+return|return
+operator|new
+name|Path
+argument_list|(
+name|sourceDir
+argument_list|,
+name|HdfsConstants
+operator|.
+name|DOT_SNAPSHOT_DIR
+operator|+
+name|Path
+operator|.
+name|SEPARATOR
+operator|+
+name|snapshotName
+argument_list|)
+return|;
 block|}
 block|}
 DECL|method|createTargetTmpDir (DistributedFileSystem targetFs, Path targetDir)
@@ -643,6 +755,30 @@ parameter_list|)
 block|{
 try|try
 block|{
+specifier|final
+name|String
+name|from
+init|=
+name|getSnapshotName
+argument_list|(
+name|inputOptions
+operator|.
+name|getFromSnapshot
+argument_list|()
+argument_list|)
+decl_stmt|;
+specifier|final
+name|String
+name|to
+init|=
+name|getSnapshotName
+argument_list|(
+name|inputOptions
+operator|.
+name|getToSnapshot
+argument_list|()
+argument_list|)
+decl_stmt|;
 name|SnapshotDiffReport
 name|sourceDiff
 init|=
@@ -652,15 +788,9 @@ name|getSnapshotDiffReport
 argument_list|(
 name|sourceDir
 argument_list|,
-name|inputOptions
-operator|.
-name|getFromSnapshot
-argument_list|()
+name|from
 argument_list|,
-name|inputOptions
-operator|.
-name|getToSnapshot
-argument_list|()
+name|to
 argument_list|)
 decl_stmt|;
 return|return
