@@ -482,20 +482,6 @@ name|CONF_LABEL_DELETE_MISSING
 argument_list|,
 literal|false
 argument_list|)
-operator|&&
-operator|!
-operator|(
-name|conf
-operator|.
-name|getBoolean
-argument_list|(
-name|DistCpConstants
-operator|.
-name|CONF_LABEL_DIFF
-argument_list|,
-literal|false
-argument_list|)
-operator|)
 condition|)
 block|{
 name|deleteMissing
