@@ -126,6 +126,22 @@ name|hdfs
 operator|.
 name|protocol
 operator|.
+name|HdfsConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
 name|SnapshotDiffReport
 import|;
 end_import
@@ -616,6 +632,19 @@ name|conf
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// reset source paths in options
+name|options
+operator|.
+name|setSourcePaths
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|source
+argument_list|)
+argument_list|)
+expr_stmt|;
 comment|// changes have been made in target
 specifier|final
 name|Path
@@ -1102,6 +1131,48 @@ argument_list|,
 literal|"s2"
 argument_list|)
 expr_stmt|;
+comment|// before sync, make some further changes on source. this should not affect
+comment|// the later distcp since we're copying (s2-s1) to target
+specifier|final
+name|Path
+name|toDelete
+init|=
+operator|new
+name|Path
+argument_list|(
+name|source
+argument_list|,
+literal|"foo/d1/foo/f1"
+argument_list|)
+decl_stmt|;
+name|dfs
+operator|.
+name|delete
+argument_list|(
+name|toDelete
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Path
+name|newdir
+init|=
+operator|new
+name|Path
+argument_list|(
+name|source
+argument_list|,
+literal|"foo/d1/foo/newdir"
+argument_list|)
+decl_stmt|;
+name|dfs
+operator|.
+name|mkdirs
+argument_list|(
+name|newdir
+argument_list|)
+expr_stmt|;
 comment|// do the sync
 name|Assert
 operator|.
@@ -1114,6 +1185,44 @@ argument_list|(
 name|options
 argument_list|,
 name|conf
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// make sure the source path has been updated to the snapshot path
+specifier|final
+name|Path
+name|spath
+init|=
+operator|new
+name|Path
+argument_list|(
+name|source
+argument_list|,
+name|HdfsConstants
+operator|.
+name|DOT_SNAPSHOT_DIR
+operator|+
+name|Path
+operator|.
+name|SEPARATOR
+operator|+
+literal|"s2"
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|spath
+argument_list|,
+name|options
+operator|.
+name|getSourcePaths
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1297,7 +1406,7 @@ name|dfs
 operator|.
 name|getFileStatus
 argument_list|(
-name|source
+name|spath
 argument_list|)
 argument_list|,
 name|dfs
@@ -1602,6 +1711,110 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+comment|/**    * Similar test with testSync, but the "to" snapshot is specified as "."    * @throws Exception    */
+annotation|@
+name|Test
+DECL|method|testSyncWithCurrent ()
+specifier|public
+name|void
+name|testSyncWithCurrent
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|options
+operator|.
+name|setUseDiff
+argument_list|(
+literal|true
+argument_list|,
+literal|"s1"
+argument_list|,
+literal|"."
+argument_list|)
+expr_stmt|;
+name|initData
+argument_list|(
+name|source
+argument_list|)
+expr_stmt|;
+name|initData
+argument_list|(
+name|target
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|allowSnapshot
+argument_list|(
+name|source
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|allowSnapshot
+argument_list|(
+name|target
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|createSnapshot
+argument_list|(
+name|source
+argument_list|,
+literal|"s1"
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|createSnapshot
+argument_list|(
+name|target
+argument_list|,
+literal|"s1"
+argument_list|)
+expr_stmt|;
+comment|// make changes under source
+name|changeData
+argument_list|(
+name|source
+argument_list|)
+expr_stmt|;
+comment|// do the sync
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|DistCpSync
+operator|.
+name|sync
+argument_list|(
+name|options
+argument_list|,
+name|conf
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// make sure the source path is still unchanged
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|source
+argument_list|,
+name|options
+operator|.
+name|getSourcePaths
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|initData2 (Path dir)
 specifier|private
