@@ -1345,6 +1345,9 @@ Release 2.7.0 - UNRELEASED
     HDFS-7748. Separate ECN flags from the Status in the DataTransferPipelineAck.
     (Anu Engineer and Haohui Mai via wheat9)
 
+    HDFS-8036. Use snapshot path as source when using snapshot diff report in
+    DistCp. (Jing Zhao via wheat9)
+
     BREAKDOWN OF HDFS-7584 SUBTASKS AND RELATED JIRAS
 
       HDFS-7720. Quota by Storage Type API, tools and ClientNameNode
